// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    235.00
  </h1>
</div>
`;

exports[` 2`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    23,512,340,987.00
  </h1>
</div>
`;
